fix: 쿼리문 성능 개선